--- a/delivery_davey.html
+++ b/delivery_davey.html
@@ -29,187 +29,33 @@
 
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-resume">CV</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html#section-home">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html#section-portfolio">Portfolio</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html#section-resume">CV</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
 
-
-
-	<section class="site-hero" style="background-image: url(images/David1.jpg);" id="section-home" data-stellar-background-ratio="0.5">
-		<div class="container">
-			<div class="row intro-text align-items-center justify-content-center">
-				<div class="col-md-10 text-center pt-5">
-
-					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">David Butterworth</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is my portfolio</strong>
-
-				</div>
-			</div>
-		</div>
-	</section> <!-- section -->
-
-
-
-
-
-
-	<section class="site-section" id="section-portfolio">
-		<div class="container">
-			<div class="row">
-				<div class="section-heading text-center col-md-12">
-					<h2>Featured <strong>Portfolio</strong></h2>
-				</div>
-			</div>
-			<div class="filters">
-				<ul>
-					<li class="active" data-filter="*">All</li>
-					<li data-filter=".game">Game</li>
-					<li data-filter=".api">API</li>
-				</ul>
-			</div>
-
-			<div class="filters-content">
-				<div class="row grid">
-					<div class="single-portfolio col-sm-4 all game">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller1fin.jpg" alt="">
-							</div>
-							<a href="delivery_davey.html" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
-						</div>
-						<div class="p-inner">
-							<a href="delivery_davey.html"><h4>Delivery Davey</h4></a>
-							<div class="cat">Game</div>
-						</div>                                         
-					</div>
-					<div class="single-portfolio col-sm-4 all game">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller2fin.jpg" alt="">
-							</div>
-							<a href="https://github.com/Tryxis/downhill-davey" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
-						</div>
-						<div class="p-inner">
-							<a href="https://github.com/Tryxis/downhill-davey"><h4>Downhill Davey</h4></a>
-							<div class="cat">Game</div>
-						</div>                                         
-					</div>                            
-					<div class="single-portfolio col-sm-4 all game">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller3fin.jpg" alt="">
-							</div>
-							<a href="https://github.com/Tryxis/the-question" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a> 
-
-						</div>
-						<div class="p-inner">
-							<a href="https://github.com/Tryxis/the-question"><h4>The Question</h4></a>
-							<div class="cat">Game</div>
-						</div>
-					</div>
-					<div class="single-portfolio col-sm-4 all api">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/api-fin.jpg" alt="">
-							</div>
-							<a href="https://github.com/Tryxis/Zoom-and-Broom" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
-						</div> 
-						<div class="p-inner">
-							<a href="https://github.com/Tryxis/Zoom-and-Broom"><h4>Zoom and Broom</h4></a>
-							<div class="cat">API</div>
-							<small>In progress</small>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- .section -->
-
-	
-	<section class="site-section " id="section-resume">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>My <strong>CV</strong></h2>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<h2 class="mb-5">Education</h2>
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> September 2017 - June 2020</span>
-						<h3>Computer Science with Games Development</h3>
-						<p>BSc with First Class Honours</p>
-						<span class="school">Northumbria University</span>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<h2 class="mb-5">Selected Experience</h2>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> September 2021 - Present</span>
-						<h3>Senior Technical Analyst</h3>
-						<p>Senior engineer and technical team lead for new business projects using a Prolog tech stack. Internal product development using .NET.</p>
-						<span class="school">CloudTrade / Advanced</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> June 2020 - September 2021</span>
-						<h3>Technical Analyst</h3>
-						<p>Maintenance engineer on an e-financial SaaS product utilising a Prolog tech stack.</p>
-						<span class="school">CloudTrade</span>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section> <!-- .section -->
-
 	<section class="site-section" id="section-about">
 		<div class="container">
 			<div class="row mb-5 align-items-center">
-				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-					<img src="images/David1.jpg" alt="Image placeholder" class="img-fluid">
+				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0 showcase-img">
+					<img src="images/delivery-davey.png" alt="Image placeholder" class="img-fluid">
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading">
-						<h2>About <strong>Me</strong></h2>
+						<h2>Delivery <strong>Davey</strong></h2>
 					</div>
-					<p class="lead">Highly motivated technology professional with a passion for learning and self-development.</p>
-					<p class="mb-5  ">Four years experience in SaaS, and a hobbyist game developer. When I'm not working, you may find me enjoying a good comic.</p>
+					<p class="lead">Small driving and delivery prototype.</p>
+					<p class="mb-5 ">Zoom around a neighbourhood picking up and delivering packages as quickly as possible. Picking up packages generates speed, crashing loses it -  so drive carefully!</p>
 
 					<p>
-						<a href="mailto: david.butterworth1337@gmail.com" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="mailto: david.butterworth1337@gmail.com" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Play Me</a>
+						<a href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
 			</div>
@@ -399,61 +245,9 @@
 		</div>
 	</section> -->
 
-	<section class="site-section" id="section-contact">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>Get <strong>In Touch</strong></h2>
-					</div>
-				</div>
-
-				<!-- <div class="col-md-7 mb-5 mb-md-0">
-					<form action="" class="site-form">
-						<h3 class="mb-5">Get In Touch</h3>
-						<div class="form-group">
-							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Email">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Phone">
-						</div>
-						<div class="form-group mb-5">
-							<textarea class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message">
-						</div>
-					</form>
-				</div> -->
-				<div class="col-md-5 pl-md-5">
-					<h3 class="mb-5">My Contact Details</h3>
-					<ul class="site-contact-details">
-						<li>
-							<span class="text-uppercase">Email</span>
-							david.butterworth1337@gmail.com
-						</li>
-						<!-- <li>
-							<span class="text-uppercase">Phone</span>
-							0123456789
-						</li> -->
-						<li>
-							<span class="text-uppercase">Location</span>
-							Newcastle Upon Tyne <br>
-							United Kingdom
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-
 
 	<footer class="site-footer">
 		<div class="container">
-
 			<div class="row mb-5">
 				<div class="col-md-12 text-center">
 					<p>
@@ -465,11 +259,8 @@
 					</p>
 				</div>
 			</div>
-			
 		</div>
 	</footer>
-
-
 
 
 	<script src="js/vendor/jquery.min.js"></script>
