--- a/projects/delivery_davey.html
+++ b/projects/delivery_davey.html
@@ -50,11 +50,12 @@
 					<div class="section-heading">
 						<h2>Delivery <strong>Davey</strong></h2>
 					</div>
-					<p class="lead">Small driving and delivery prototype.</p>
-					<p class="mb-5 ">Zoom around a neighbourhood picking up and delivering packages as quickly as possible. Picking up packages generates speed, crashing loses it -  so drive carefully!</p>
+					<p class="lead">Small driving and delivery prototype</p>
+					<p class="mb-5">Zoom around a neighbourhood picking up and delivering packages as quickly as possible. Picking up packages generates speed, crashing loses it -  so drive carefully!</p>
+					<p class="mb-5">Game currently cannot be played in WebGL</p>
 
 					<p>
-						<a href="mailto: david.butterworth1337@gmail.com" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Play Me</a>
+						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="playAlert()">Play Me</a>
 						<a href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
