--- a/projects/delivery_davey.html
+++ b/projects/delivery_davey.html
@@ -56,7 +56,7 @@
 
 					<p>
 						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
-						<a href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
+						<a href="https://github.com/Tryxis/delivery-davey" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
 			</div>
