--- a/projects/delivery_davey.html
+++ b/projects/delivery_davey.html
@@ -52,10 +52,11 @@
 					</div>
 					<p class="lead">Small driving and delivery prototype</p>
 					<p class="mb-5">Zoom around a neighbourhood picking up and delivering packages as quickly as possible. Picking up packages generates speed, crashing loses it -  so drive carefully!</p>
-					<p class="mb-5">Game currently cannot be played in WebGL</p>
+					<!-- <p class="mb-5">Game currently cannot be played in WebGL</p> -->
 
 					<p>
-						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
+						<!-- <a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a> -->
+						<a href="https://tryxis.itch.io/delivery-davey" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Play Me</a>
 						<a href="https://github.com/Tryxis/delivery-davey" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
