--- a/projects/the_question.html
+++ b/projects/the_question.html
@@ -52,7 +52,7 @@
 					</div>
 					<p class="lead">Interface-based quiz game</p>
 					<p class="mb-5">Test your popular culture knowledge in rounds of multiple choice questions.</p>
-					<p class="mb-5">Game currently cannot be played in WebGL</p>
+					<!-- <p class="mb-5">Game currently cannot be played in WebGL</p> -->
 
 					<p>
 						<a href="https://tryxis.itch.io/the-question" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-m">Play Me</a>
