--- a/projects/downhill_davey.html
+++ b/projects/downhill_davey.html
@@ -52,10 +52,11 @@
 					</div>
 					<p class="lead">Small platform prototype</p>
 					<p class="mb-5">Flip and trick your way down Mount Muckle. Bonking your head will send you back to the top</p>
-					<p class="mb-5">Game currently cannot be played in WebGL</p>
+					<!-- <p class="mb-5">Game currently cannot be played in WebGL</p> -->
 
 					<p>
-						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
+						<!-- <a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a> -->
+						<a href="https://tryxis.itch.io/downhill-davey" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Play Me</a>
 						<a href="https://github.com/Tryxis/downhill-davey" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
